--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
-  "keywords": ["Backend", "javascript"],
+  "keywords": [
+    "Backend",
+    "javascript"
+  ],
   "author": "Prajwal",
   "license": "ISC",
-  "description": "Backend Project"
+  "description": "Backend Project",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
